# ogrian-carpet

./: .cdtproject  .cvsignore  .gitignore  .project  AUTHORS  CHANGELOG  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Ogrian.sln  Ogrian.vcproj  OgrianAIWizardThing.cpp  OgrianAIWizardThing.h  OgrianAkimboFireballSpell.h  OgrianAlbatrossSpell.h  OgrianAlbatrossThing.cpp  OgrianAlbatrossThing.h  OgrianApplication.h  OgrianAudio.cpp  OgrianAudio.h  OgrianBaloonThing.cpp  OgrianBaloonThing.h  OgrianBuildSpell.h  OgrianBuildSpellThing.cpp  OgrianBuildSpellThing.h  OgrianBuildingHeightMap.cpp  OgrianBuildingHeightMap.h  OgrianCameraThing.cpp  OgrianCameraThing.h  OgrianCastle.cpp  OgrianCastle.h  OgrianCastleSpellThing.h  OgrianCastleTowerThing.h  OgrianClaimSpell.h  OgrianClaimSpellThing.h  OgrianClock.cpp  OgrianClock.h  OgrianConst.cpp  (+100 more)
Debug/: ogre.cfg  resources.cfg  world.cfg
Media/: Ogrian.material  castle.material  castledark.material  crane.material  credits.txt  foliage.material  gnome.material  jeff.material  maps.material  mshrine.material  rick.material  sentinel.material  spider.material  tick.material
Media/maps/: crescent.txt  hellbridge.txt  islands.txt  lowerlands.txt  lowlands.txt
Media/menu/: hud.overlay  menu.material  menu.overlay
Media/models/: castle.blend  castledark.blend  keep.mesh  tower1.mesh  wall.blend  wall.mesh  wall1.mesh
Media/sprites/: cupola.tga  cupoladark.tga
NatureSceneManager/: Makefile.in
NatureSceneManager/include/: Makefile.in  NaturePatchManager.h  NatureTerrainPatch.h
NatureSceneManager/scripts/: Plugin_NatureSceneManager.vcproj
NatureSceneManager/src/: Makefile.in  NaturePatchManager.cpp  NatureSceneManager.cpp
Ogrian/: Plugins.cfg  castleskins.txt  config.cfg  config.txt  constants.txt  crescent.cfg  islands.cfg  maps.txt  ogre.cfg  ogrian.cfg  readme.txt  resources.cfg  shrineskins.txt  skins.txt  strings.txt  wizardskins.txt
Ogrian/Media/: Ogrian.material  bunny.material  castle.material  crane.material  credits.txt  foliage.material  jeff.material  jess.material  mappreviews.material  mike.material  rick.material  wizard.material
Ogrian/Media/brains/: joe.txt
Ogrian/Media/gui/: hud.material  spells.material
Ogrian/Media/maps/: cliffs.txt  crescent.txt  hell.txt  hellbridge.txt  islands.txt  lowerlands.txt  lowlands.txt  snow.txt
Ogrian/Media/menu/: BasicOgreGuiTemplates.inc  hud.material  hud.overlay  menu.material  menu.overlay  ogre.fontdef  playerlist.overlay  spells.material
Ogrian/Media/models/: Tower.mesh  keepdark.mesh  mshrine.mesh  tower.blend  towerdark.mesh  wall2.mesh
OgrianMedia/: Ogrian.material  credits.txt  smoke.material  smoke.particle  wizard.material
OgrianMedia/menu/: OgrianMenu.material  gamesetup.overlay  hud.overlay  playerlist.overlay
OgrianMedia/music/: CREDITS.txt
OgrianMedia/sprites/wizard/: Thumbs.db
Patches/: AudioTest.cpp  BillboardSet.patch  NatureTerrainTexture.patch  NetworkTest.cpp  fake.cpp  fake.hpp  naturenewmap.patch  stub.cpp  stub.hpp
Release/: ogre.cfg  resources.cfg  terrain.cfg  world.cfg
Tests/: .cvsignore  AudioTest.cpp  Client.cpp  Client.h  LogManager.cpp  LogManager.hpp  Makefile.am  Multiplayer.cpp  Multiplayer.h  NetworkTest.cpp  Server.cpp  Server.h  SpinBuffer.cpp  SpinBufferTest.cpp  Streamable.cpp  Streamable.h  stub.cpp  stub.hpp
include/: .cvsignore  Makefile.am  NatureTerrainPatch.h  OgrianAIWizardThing.h  OgrianAlbatrossSpell.h  OgrianAudio.h  OgrianBuildSpell.h  OgrianBuildSpellThing.h  OgrianBuildingHeightMap.h  OgrianCameraThing.h  OgrianCastle.h  OgrianClaimSpell.h  OgrianConst.h  OgrianCraneThing.h  OgrianDamageableThing.h  OgrianDotManager.h  OgrianFireballThing.h  OgrianFoliageThing.h  OgrianFrameListener.h  OgrianGame.h  OgrianGnomeThing.h  OgrianHealthBarManager.h  OgrianHeightMap.h  OgrianHud.h  OgrianInput.h  OgrianManaThing.h  OgrianMenu.h  OgrianModel.h  OgrianMultiplayer.h  OgrianOrientedSprite.h  OgrianPacketEnum.h  OgrianPhysics.h  OgrianPlayerList.h  OgrianPortalThing.h  OgrianRenderer.h  OgrianSentinelSpell.h  OgrianSentinelThing.h  OgrianShrineThing.h  OgrianSkinManager.h  OgrianSpellManager.h  (+10 more)
scripts/: Plugin_NatureSceneManager.vcproj
src/: HeightmapLoader.cpp  Makefile.am  NatureTerrainPatch.cpp  OgrianAIWizardThing.cpp  OgrianAlbatrossThing.cpp  OgrianAudio.cpp  OgrianBuildSpellThing.cpp  OgrianBuildingHeightMap.cpp  OgrianCameraThing.cpp  OgrianCastle.cpp  OgrianClock.cpp  OgrianConst.cpp  OgrianCraneThing.cpp  OgrianDamageableThing.cpp  OgrianDotManager.cpp  OgrianFireballThing.cpp  OgrianFrameListener.cpp  OgrianGame.cpp  OgrianGnomeThing.cpp  OgrianHealthBarManager.cpp  OgrianHeightMap.cpp  OgrianHud.cpp  OgrianInput.cpp  OgrianManaThing.cpp  OgrianMenu.cpp  OgrianModel.cpp  OgrianMultiplayer.cpp  OgrianOrientedSprite.cpp  OgrianPhysics.cpp  OgrianPlayerList.cpp  OgrianPortalThing.cpp  OgrianRenderer.cpp  OgrianSentinelThing.cpp  OgrianShrineThing.cpp  OgrianSkinManager.cpp  OgrianSpellManager.cpp  OgrianSprite.cpp  OgrianTeam.cpp  OgrianThing.cpp  OgrianTickThing.cpp  (+4 more)
win32/: castleskins.txt  config.txt  constants.txt  plugins.cfg  readme.txt  shrineskins.txt  strings.txt
