noinst_HEADERS= fmod.h \
	OgrianAIWizardThing.h \
	OgrianAlbatrossSpell.h \
	OgrianAlbatrossThing.h \
	OgrianApplication.h \
	OgrianAudio.h \
	OgrianBuildingHeightMap.h \
	OgrianBuildSpell.h \
	OgrianBuildSpellThing.h \
	OgrianCameraThing.h \
	OgrianCastle.h \
	OgrianClaimSpell.h \
	OgrianClaimSpellThing.h \
	OgrianClock.h \
	OgrianConst.h \
	OgrianCraneThing.h \
	OgrianDamageableThing.h \
	OgrianDotManager.h \
	OgrianFireballSpell.h \
	OgrianFireballThing.h \
	OgrianFoliageThing.h \
	OgrianFrameListener.h \
	OgrianGame.h \
	OgrianGnomeSpell.h \
	OgrianGnomeThing.h \
	OgrianHealthBarManager.h \
	OgrianHeightMap.h \
	OgrianHud.h \
	OgrianInput.h \
	OgrianManaThing.h \
	OgrianMenu.h \
	OgrianModel.h \
	OgrianMouseFrameListener.h \
	OgrianMultiplayer.h \
	OgrianOrientedSprite.h \
	OgrianPacketEnum.h \
	OgrianPhysics.h \
	OgrianPlayerList.h \
	OgrianPortalThing.h \
	OgrianRenderer.h \
	OgrianSentinelSpell.h \
	OgrianSentinelThing.h \
	OgrianShrineThing.h \
	OgrianSkinManager.h \
	OgrianSpeedSpell.h \
	OgrianSpell.h \
	OgrianSpellManager.h \
	OgrianSprite.h \
	OgrianSummonSpellThing.h \
	OgrianTeam.h \
	OgrianTeleportSpell.h \
	OgrianTeleportSpellThing.h \
	OgrianThing.h \
	OgrianTickSpell.h \
	OgrianTickThing.h \
	OgrianTimedThing.h \
	OgrianTowerThing.h \
	OgrianVisRep.h \
	OgrianWizardThing.h \
	resource.h
